--- a/edit.html
+++ b/edit.html
@@ -200,6 +200,20 @@ button {
 .footer i {
   font-size: 24px;
 }
+/* Close button styling */
+.close-btn {
+    display: block;
+    width: 100px;
+    margin: 20px auto;
+    text-align: center;
+    background-color: #dc3545;
+    color: white;
+    border: none;
+    padding: 10px;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+}
     #myBtn {
   display: none;
   position: fixed;
@@ -281,6 +295,8 @@ button {
 
     <!-- List of students will appear here -->
     <ul id="student-list" class="list-unstyled"></ul>
+    <button class="close-btn text-center" onclick="goBack()">Close</button>
+
 </div>
         <div id="confirmation-modal" class="modal" tabindex="-1" role="dialog" style="display:none;">
             <div class="modal-dialog" role="document">
@@ -777,7 +793,10 @@ function topFunction() {
     document.documentElement.scrollTop = 0;
 }
 
-
+    // Close button functionality
+function goBack() {
+window.history.back();
+}
 </script>
 </body>
 </html>
