--- a/view.html
+++ b/view.html
@@ -73,13 +73,16 @@
         </div>
 
         <button id="view-students" type="button" class="btn btn-success">View Students</button>
+        
     </div>
 
     <!-- Back to Class Selection button -->
     <button id="back-to-selection" type="button" class="btn btn-secondary mt-3" style="display: none;">Back to Class Selection</button>
 
     <h4 id="selected-class-header" class="mt-4" style="display: none;"></h4>
-    <ul id="student-list" class="list-unstyled"></ul>
+    <ul id="student-list" class="list-unstyled"> 
+    </ul>
+    <button class="close-btn text-center" onclick="goBack()">Close</button>
 </div>
 
 <!-- Footer -->
@@ -224,6 +227,10 @@ function scrollFunction() {
 }
 function topFunction() {
     document.documentElement.scrollTop = 0;
+}
+// Close button functionality
+function goBack() {
+window.history.back();
 }
 
 </script>
