--- a/student_management.html
+++ b/student_management.html
@@ -330,7 +330,7 @@ button {
         <!-- Dropdown Button -->
         <div class="btn-group">
           <button class="btn btn-info dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-            View Students
+            View Results
           </button>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="view.html">View Terminal Results</a></li>
