--- a/edit.html
+++ b/edit.html
@@ -288,7 +288,8 @@ button {
     <button id="view-students" type="button" class="btn btn-success w-100">View Students</button>
 
     <!-- New button to go back to class selection -->
-    <button id="back-to-selection" type="button" class="btn btn-secondary mt-3" style="display: none;">Back to Class Selection</button>
+     <!-- Back to Class Selection button -->
+     <button id="back-to-selection" type="button" class="btn btn-success mt-3" style="display: none;">Back to Class Selection</button>
 
     <!-- Placeholder for the selected class name -->
     <h4 id="selected-class-header" class="mt-4"></h4>
