--- a/view.html
+++ b/view.html
@@ -76,7 +76,7 @@
     </div>
 
     <!-- Back to Class Selection button -->
-    <button id="back-to-selection" type="button" class="btn btn-secondary mt-3" style="display: none;">Back to Class Selection</button>
+    <button id="back-to-selection" type="button" class="btn btn-success mt-3" style="display: none;">Back to Class Selection</button>
 
     <h4 id="selected-class-header" class="mt-4" style="display: none;"></h4>
     <ul id="student-list" class="list-unstyled"> 
