--- a/student_management.html
+++ b/student_management.html
@@ -7,272 +7,11 @@
   <title>Staff Dashboard</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+    <link rel="stylesheet" href="student-management.css">
     <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     </head>
-  <style>
-    ul {
-    list-style-type: none; /* Removes bullet points */
-    padding: 0;           /* Optional: removes default padding */
-    margin: 0;            /* Optional: removes default margin */
-}  
-.center-container {
-            max-width: 500px;
-            margin: auto;
-            padding: 20px;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-            border-radius: 10px;
-            background: white;
-        }
-
-      body {
-            background-color: white;
-        }
-        .center-container {
-            max-width: 500px;
-            margin: auto;
-            padding: 20px;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-            border-radius: 10px;
-            background: white;
-        }
-        .modal-body-scroll {
-    max-height: 400px; /* Set the maximum height */
-    overflow-y: auto;  /* Enable vertical scrolling */
-}
-
-/* Fixed Circular Images */
-.fixed-image, .circular-img {
-    width: 55px;
-    height: 60px;
-    object-fit: contain;
-    border-radius: 50%;
-}
-
-/* First Navbar - Contains images and text */
-/* First Navbar - Contains images and text */
-.first-navbar {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 1030; /* Ensures it stays above other content */
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 10px;
-    background-color: #f8f9fa; /* Light background */
-}
-
-/* Second Navbar - Contains menu items */
-.second-navbar {
-    position: fixed;
-    top: 60px; /* Positioned right below the first navbar */
-    width: 100%;
-    z-index: 1029; /* Slightly lower than the first navbar */
-    display: flex;
-    padding: 24px 14px;
-    background-color: #f8f9fa; /* Light background */
-    height: 50px;
-    justify-content: space-between;
-}
-.second-navbar .navbar-nav .nav-item {
-    margin-right: 20px; /* Adds space between each nav item */
-}
-
-.second-navbar .navbar-nav .nav-item:last-child {
-    margin-right: 0; /* Removes margin from the last item for alignment */
-}
-
-/* Center align menu toggler on mobile */
-.navbar-toggler {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-/* Menu link styles */
-.navbar-nav .nav-item .nav-link {
-    color: #343a40 !important; /* Dark text color */
-    line-height: 1.8;
-    transition: color 0.3s ease, background-color 0.3s ease;
-}
-
-/* Hover effect for link */
-.navbar-nav .nav-item .nav-link:hover {
-    color: #e4e8ec !important; /* Slightly darker on hover */
-    background-color: rgba(255, 254, 254, 0.5) !important;
-}
-/* Mobile view - Keep background light */
-@media (max-width: 992px) {
-    .navbar-collapse {
-        background-color: #f8f9fa; /* Light background for mobile menu */
-    }
-
-    .navbar-nav .nav-item .nav-link {
-        color: #343a40 !important; /* Dark text color */
-    }
-
-    .navbar-toggler-icon {
-        filter: invert(1); /* Dark toggler icon for light background */
-    }
-}
-
-/* Large screen styles */
-@media (min-width: 992px) {
-    .navbar-collapse {
-        justify-content: center;
-    }
-
-    /* Hide the toggler on large screens */
-    .navbar-toggler {
-        display: none;
-    }
-}
-/* Cancel button styles */
-.cancel-btn {
-    display: none; /* Hidden by default */
-    background: transparent;
-    border: none;
-    font-size: 1.5rem; /* Adjust size as needed */
-    color: #dbe2e8; /* Color of the icon */
-    position: absolute;
-    top: 10px; /* Adjust top position */
-    right: 10px; /* Adjust right position */
-    cursor: pointer;
-}
-/*to hide the menu icon*/
-.hidden {
-    display: none !important; /* Forcefully hide the element */
-}
-
-/* Show the cancel button in mobile view */
-@media (max-width: 992px) {
-    .cancel-btn {
-        display: block; /* Show when navbar is toggled */
-    }
-}
-/* Hide the menu icon by default when navbar is shown */
-.navbar-toggler-icon.hidden {
-    display: none;
-}
-.hidden {
-    display: none !important; /* Forcefully hide the element */
-}
-
-   /* Additional spacing for page content */
-body {
-    padding-top: 120px; /* Ensures content doesn’t overlap with fixed navbars */
-}
-
-
-button {
-            padding: 10px 15px;
-            background-color: #202122;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-        button:hover {
-            background-color: #a6a6a9;
-        }
-    .footer {
-  background: #f8f9fa;
-  color: #343a40;
-  padding: 10px;
-  text-align: center;
-  display: flex;
-  justify-content: center; /* Center horizontally */
-  align-items: center;     /* Center vertically */
-  flex-direction: column;  /* Stack items vertically */
-}
-
-.footer .row {
-  width: 100%; /* Ensure row takes up the full width */
-  display: flex;
-  justify-content: center; /* Center horizontally */
-  align-items: center;     /* Center vertically if necessary */
-  margin: 0;
-}
-
-.footer .col {
-  padding: 0;
-  text-align: center; /* Ensure content in columns is centered */
-}
-
-.footer p {
-  margin: 0;
-}
-
-.footer a {
-  color: #007bff;
-  text-decoration: none;
-}
-
-.footer i {
-  font-size: 24px;
-}
-
- /* Remove default dropdown caret */
-  .dropdown-toggle::after {
-    content: none;
-  }
-
-  .dropdown-menu {
-    display: none;
-    position: absolute;
-    background-color: white;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    margin-top: 5px;
-    list-style: none;
-    padding: 0;
-    z-index: 1000;
-  }
-
-  .dropdown-menu.show {
-    display: block;
-  }
-
-  .dropdown-menu li {
-    padding: 8px 16px;
-  }
-
-  .dropdown-menu li:hover {
-    background-color: #f0f0f0;
-    cursor: pointer;
-  }
-
-  .dropdown-item {
-    text-decoration: none;
-    color: #000;
-  }
-
-  .dropdown-item:hover {
-    text-decoration: none;
-    color: #007bff;
-  }
-#myBtn {
-  display: none;
-  position: fixed;
-  bottom: 15px;
-  right: 30px;
-  z-index: 99;
-  border: none;
-  outline: none;
-  background-color: rgb(210, 210, 233);
-  color: white;
-  cursor: pointer;
-  padding: 15px;
-  border-radius: 4px;
-}
-
-#myBtn:hover {
-  background-color: #555;
-}    
-  </style>
-</head>
 <body>
     <!-- First Navbar (Images and Admin Dashboard Text) -->
 <nav class="navbar navbar-light bg-white text-dark fixed-top first-navbar">
@@ -379,83 +118,6 @@ button {
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-  <script>
-    function toggleNavbar() {
-    const navbarNav = document.getElementById("navbarNav");
-    const cancelButton = document.querySelector(".cancel-btn");
-    const menuIcon = document.querySelector(".navbar-toggler-icon"); // Select the menu icon
-
-    if (navbarNav.classList.contains("show")) {
-        // If navbar is open, close it
-        navbarNav.classList.remove("show");
-        cancelButton.style.display = "none"; // Hide cancel button
-        menuIcon.classList.remove("hidden"); // Show menu icon
-    } else {
-        // If navbar is closed, open it
-        navbarNav.classList.add("show");
-        cancelButton.style.display = "block"; // Show cancel button
-        menuIcon.classList.add("hidden"); // Hide menu icon completely
-    }
-}  
-
-document.addEventListener('DOMContentLoaded', () => {
-  const dropdownToggle = document.querySelector('.dropdown-toggle');
-  const dropdownMenu = document.querySelector('.dropdown-menu');
-  const dropdownItems = dropdownMenu.querySelectorAll('li');
-
-  // Show dropdown on hover over the toggle
-  dropdownToggle.addEventListener('mouseover', () => {
-    dropdownMenu.classList.add('show');
-  });
-
-  // Keep the dropdown visible when hovering over the menu itself
-  dropdownMenu.addEventListener('mouseover', () => {
-    dropdownMenu.classList.add('show');
-  });
-
-  // Hide dropdown when mouse leaves both toggle and menu
-  dropdownToggle.addEventListener('mouseout', () => {
-    dropdownMenu.classList.remove('show');
-  });
-
-  dropdownMenu.addEventListener('mouseout', () => {
-    dropdownMenu.classList.remove('show');
-  });
-
-  // Navigate to the correct page and hide dropdown when an item is clicked
-  dropdownItems.forEach(item => {
-    item.addEventListener('click', (event) => {
-      const targetPage = event.target.getAttribute('data-target'); // Get the target URL
-      if (targetPage) {
-        dropdownMenu.classList.remove('show'); // Hide the dropdown
-        window.location.href = targetPage; // Navigate to the target page
-      }
-    });
-  });
-
-    // Hide dropdown if clicked anywhere outside the button or menu
-    document.addEventListener('click', (event) => {
-      if (!dropdownToggle.contains(event.target) && !dropdownMenu.contains(event.target)) {
-        dropdownMenu.classList.remove('show');
-      }
-    });
-  });
-    // Back to top button functionality
-    window.onscroll = function() { scrollFunction() };
-
-    function scrollFunction() {
-        if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-            document.getElementById("myBtn").style.display = "block";
-        } else {
-            document.getElementById("myBtn").style.display = "none";
-        }
-    }
-
-    function topFunction() {
-        document.body.scrollTop = 0;
-        document.documentElement.scrollTop = 0;
-    }
- 
-  </script>
+  <script src="student-management.js"> </script>
 </body>
 </html>
