--- a/resultmanagement.html
+++ b/resultmanagement.html
@@ -52,10 +52,9 @@
         </ul>
     </div>
   </nav>
-  <div class="center-container mt-5 bg-light">
-  <div class="container">
+  <div class="center-container mt-auto bg-light">
     <div id="resultManagementHeader" class="mt-5 text-center">
-        <h2>Cumulative Result Entry</h2>
+        <h3>Cumulative Result Entry</h3>
         <p> Login With Your Staff Credentials To Select your class and subject to enter student scores.</p>
     </div>
 
@@ -119,7 +118,7 @@
 </div></div></div>
 
 
-<br><br>
+<br>
 <!-- Footer -->
 <div class="footer bg-light mt-5">
    <div class="row text-center py-3">
