--- a/extra-curriculum-assessment.html
+++ b/extra-curriculum-assessment.html
@@ -6,279 +6,7 @@
     <title>Assessment of Student Conduct and Development</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
-    <style>
-        .form-control-score {
-    width: 50px; /* Smaller box width */
-    text-align: center;
-}
-.container {
-    max-width: 60%; /* Fixed width for larger screens */
-    margin: auto;
-    padding: 20px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-    background: white;
-    overflow-x: auto; /* Enable horizontal scrolling */
-}
-
- body {
-            background-color: white;
-        }
-       
-        .modal-body-scroll {
-    max-height: 400px; /* Set the maximum height */
-    overflow-y: auto;  /* Enable vertical scrolling */
-}
-
-/* Fixed Circular Images */
-.fixed-image, .circular-img {
-    width: 55px;
-    height: 60px;
-    object-fit: contain;
-    border-radius: 50%;
-}
-
-/* First Navbar - Contains images and text */
-/* First Navbar - Contains images and text */
-.first-navbar {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 1030; /* Ensures it stays above other content */
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 10px;
-    background-color: #f8f9fa; /* Light background */
-}
-
-/* Second Navbar - Contains menu items */
-.second-navbar {
-    position: fixed;
-    top: 60px; /* Positioned right below the first navbar */
-    width: 100%;
-    z-index: 1029; /* Slightly lower than the first navbar */
-    display: flex;
-    padding: 24px 14px;
-    background-color: #f8f9fa; /* Light background */
-    height: 50px;
-    justify-content: space-between;
-}
-.second-navbar .navbar-nav .nav-item {
-    margin-right: 20px; /* Adds space between each nav item */
-}
-
-.second-navbar .navbar-nav .nav-item:last-child {
-    margin-right: 0; /* Removes margin from the last item for alignment */
-}
-
-/* Center align menu toggler on mobile */
-.navbar-toggler {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-/* Menu link styles */
-.navbar-nav .nav-item .nav-link {
-    color: #343a40 !important; /* Dark text color */
-    line-height: 1.8;
-    transition: color 0.3s ease, background-color 0.3s ease;
-}
-
-/* Hover effect for link */
-.navbar-nav .nav-item .nav-link:hover {
-    color: #e4e8ec !important; /* Slightly darker on hover */
-    background-color: rgba(255, 254, 254, 0.5) !important;
-}
-/* Mobile view - Keep background light */
-@media (max-width: 992px) {
-    .navbar-collapse {
-        background-color: #f8f9fa; /* Light background for mobile menu */
-    }
-
-    .navbar-nav .nav-item .nav-link {
-        color: #343a40 !important; /* Dark text color */
-    }
-
-    .navbar-toggler-icon {
-        filter: invert(1); /* Dark toggler icon for light background */
-    }
-}
-
-/* Large screen styles */
-@media (min-width: 992px) {
-    .navbar-collapse {
-        justify-content: center;
-    }
-
-    /* Hide the toggler on large screens */
-    .navbar-toggler {
-        display: none;
-    }
-}
-/* Cancel button styles */
-.cancel-btn {
-    display: none; /* Hidden by default */
-    background: transparent;
-    border: none;
-    font-size: 1.5rem; /* Adjust size as needed */
-    color: #dbe2e8; /* Color of the icon */
-    position: absolute;
-    top: 10px; /* Adjust top position */
-    right: 10px; /* Adjust right position */
-    cursor: pointer;
-}
-/*to hide the menu icon*/
-.hidden {
-    display: none !important; /* Forcefully hide the element */
-}
-
-/* Show the cancel button in mobile view */
-@media (max-width: 992px) {
-    .cancel-btn {
-        display: block; /* Show when navbar is toggled */
-    }
-}
-/* Hide the menu icon by default when navbar is shown */
-.navbar-toggler-icon.hidden {
-    display: none;
-}
-.hidden {
-    display: none !important; /* Forcefully hide the element */
-}
-
-   /* Additional spacing for page content */
-body {
-    padding-top: 120px; /* Ensures content doesn’t overlap with fixed navbars */
-}
-
-
-button {
-            padding: 10px 15px;
-            background-color: #202122;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-        button:hover {
-            background-color: #a6a6a9;
-        }
-    .footer {
-  background: #f8f9fa;
-  color: #343a40;
-  padding: 10px;
-  text-align: center;
-  display: flex;
-  justify-content: center; /* Center horizontally */
-  align-items: center;     /* Center vertically */
-  flex-direction: column;  /* Stack items vertically */
-}
-
-.footer .row {
-  width: 100%; /* Ensure row takes up the full width */
-  display: flex;
-  justify-content: center; /* Center horizontally */
-  align-items: center;     /* Center vertically if necessary */
-  margin: 0;
-}
-
-.footer .col {
-  padding: 0;
-  text-align: center; /* Ensure content in columns is centered */
-}
-
-.footer p {
-  margin: 0;
-}
-
-.footer a {
-  color: #007bff;
-  text-decoration: none;
-}
-
-.footer i {
-  font-size: 24px;
-}
-    #myBtn {
-  display: none;
-  position: fixed;
-  bottom: 15px;
-  right: 30px;
-  z-index: 99;
-  border: none;
-  outline: none;
-  background-color: rgb(210, 210, 233);
-  color: white;
-  cursor: pointer;
-  padding: 15px;
-  border-radius: 4px;
-}
-
-#myBtn:hover {
-  background-color: #555;
-}
-    /* Mobile adjustments */
-@media (max-width: 576px) {
-    /* Center modal header content on smaller screens */
-    .fixed-image, .circular-img {
-        width: 40px;
-        height: 40px;
-    }
-
-    /* Navbar adjustments */
-    .first-navbar {
-        top: 0;
-        padding: 0 8px;
-    }
-
-    .second-navbar {
-        top: 50px;
-        padding: 15px 10px;
-        height: 40px;
-    }
-
-    .navbar-toggler {
-        left: 50%;
-        transform: translateX(-50%);
-    }
-
-    .cancel-btn {
-        top: 8px;
-        right: 8px;
-        font-size: 1.25rem;
-    }
-
-    /* Footer adjustments */
-    .footer {
-        padding: 8px;
-        font-size: 14px;
-    }
-
-    .footer .row {
-        flex-direction: column;
-    }
-
-    .footer i {
-        font-size: 20px;
-    }
-
-    #myBtn {
-        bottom: 10px;
-        right: 20px;
-        padding: 10px;
-    }
-
-    button {
-        padding: 8px 12px;
-        font-size: 14px;
-    }
-}
-
-
-</style>
+    <link rel="stylesheet" href="extra.css">
 </head>
 <body>
      <!-- First Navbar (Images and Admin Dashboard Text) -->
@@ -308,18 +36,21 @@ button {
             <li class="nav-item">
                 <a class="nav-link text-danger" href="staff_dashboard.html">Home</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link text-danger" id="resultManagementLink"  href="resultmanagement.html">Acadmic Grade</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-danger" id="resultManagementLink"  href="extra-curriculum-assessment.html">Conduct and Development</a>
-            </li>        
+            <li class="nav-item dropdown">
+                <a class="nav-link text-danger dropdown-toggle" href="#" id="resultManagementDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="padding-right: 0;">
+                  Result Management
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="resultManagementDropdown">
+                  <li><a class="dropdown-item" href="resultmanagement.html">Academic Assesesment</a></li>
+                  <li><a class="dropdown-item" href="extra-curriculum-assessment.html"> Behavioural Assesesment</a></li>
+                </ul>
+              </li>
         </ul>
     </div>
   </nav>
 <div class="container">
     <div class=" mt-5">
-        <h2 class="text-center">Assessment of Student Conduct and Development</h2>
+        <h4 class="text-center">Assessment of Student Conduct and Development</h4>
 
         <!-- Login Form -->
         <div id="loginCard" class="card shadow p-4">
@@ -405,157 +136,6 @@ button {
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script>
-        function toggleNavbar() {
-    const navbarNav = document.getElementById("navbarNav");
-    const cancelButton = document.querySelector(".cancel-btn");
-    const menuIcon = document.querySelector(".navbar-toggler-icon"); // Select the menu icon
-
-    if (navbarNav.classList.contains("show")) {
-        // If navbar is open, close it
-        navbarNav.classList.remove("show");
-        cancelButton.style.display = "none"; // Hide cancel button
-        menuIcon.classList.remove("hidden"); // Show menu icon
-    } else {
-        // If navbar is closed, open it
-        navbarNav.classList.add("show");
-        cancelButton.style.display = "block"; // Show cancel button
-        menuIcon.classList.add("hidden"); // Hide menu icon completely
-    }
-}
-        document.getElementById('loginForm').addEventListener('submit', async (e) => {
-            e.preventDefault();
-            const identifier = document.getElementById('identifier').value;
-            const password = document.getElementById('password').value;
-
-            try {
-                const response = await fetch('/form-master-login', {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ identifier, password })
-                });
-                const data = await response.json();
-
-                if (response.ok) {
-                    document.getElementById('loginCard').style.display = 'none';
-                    document.getElementById('classSelection').style.display = 'block';
-                    document.getElementById('classInfo').innerText = `Class: ${data.formClass || 'Undefined'}`;
-                    loadStudents(data.students || []);
-                } else {
-                    alert(data.message);
-                }
-            } catch (error) {
-                console.error('Login error:', error);
-                alert('Failed to log in');
-            }
-        });
-
-        document.getElementById('loadStudentsBtn').addEventListener('click', () => {
-            document.getElementById('classSelection').style.display = 'none';
-            document.getElementById('studentList').style.display = 'block';
-        });
-        function loadStudents(students) {
-    const container = document.getElementById('studentsContainer');
-    container.innerHTML = '';
-    students.forEach(student => {
-        const studentDiv = document.createElement('div');
-        studentDiv.classList.add('border', 'p-3', 'mb-3', 'rounded');
-        studentDiv.innerHTML = `
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" name="selectedStudents" value="${student.studentID}" id="student${student.studentID}">
-                <label class="form-check-label" for="student${student.studentID}">
-                    ${student.firstname} ${student.surname} (ID: ${student.studentID})
-                </label>
-            </div>
-           <div class="form-row mt-2">
-    <div class="form-group col-md-6">
-        <label>Academic Responsibility</label>
-        <input type="text" maxlength="1" class="form-control form-control-score" name="academicResponsibility" required>
-    </div>
-    <div class="form-group col-md-6">
-        <label>Respect and Discipline</label>
-        <input type="text" maxlength="1" class="form-control form-control-score" name="respectAndDiscipline" required>
-    </div>
-</div>
-<div class="form-row">
-    <div class="form-group col-md-6">
-        <label>Punctuality and Personal Organization</label>
-        <input type="text" maxlength="1" class="form-control form-control-score" name="punctuality" required>
-    </div>
-    <div class="form-group col-md-6">
-        <label>Social and Physical Development</label>
-        <input type="text" maxlength="1" class="form-control form-control-score" name="socialDevelopment" required>
-    </div>
-</div>
-<div class="form-row">
-    <div class="form-group col-md-6">
-        <label>Attendance</label>
-        <input type="text" class="form-control form-control-score" name="attendance" required> <!-- Removed maxlength -->
-    </div>
-</div>
-
-            <input type="hidden" name="studentID" value="${student.studentID}">
-        `;
-        container.appendChild(studentDiv);
-    });
-    
-   // Restrict input to numbers only
-document.querySelectorAll('.form-control-score').forEach(input => {
-    input.addEventListener('input', function() {
-        if (this.name === 'attendance') {
-            // Allow values from 0 to 120 for Attendance
-            this.value = this.value.replace(/[^0-9]/g, ''); // Allow only numeric characters
-            if (this.value !== "" && parseInt(this.value, 10) > 120) {
-                this.value = '120'; // Cap at 120
-            }
-        } else {
-            // Restrict other fields to 1 to 4
-            this.value = this.value.replace(/[^1-4]/g, ''); // Allow only 1 to 4
-        }
-    });
-});
-        }
-document.getElementById('submitBtn').addEventListener('click', async () => {
-    const term = document.getElementById('termSelect').value;
-    const session = document.getElementById('sessionSelect').value;
-    const assessments = Array.from(document.querySelectorAll('#studentsContainer > div'))
-        .filter(studentDiv => studentDiv.querySelector('input[name="selectedStudents"]').checked)
-        .map(studentDiv => ({
-            studentID: studentDiv.querySelector('input[name="studentID"]').value,  // Updated to studentID
-            academicResponsibility: studentDiv.querySelector('input[name="academicResponsibility"]').value,
-            respectAndDiscipline: studentDiv.querySelector('input[name="respectAndDiscipline"]').value,
-            punctuality: studentDiv.querySelector('input[name="punctuality"]').value,
-            socialDevelopment: studentDiv.querySelector('input[name="socialDevelopment"]').value,
-            attendance: studentDiv.querySelector('input[name="attendance"]').value
-
-        }));
-        // Check if any students are selected
-    if (assessments.length === 0) {
-        alert('Please select at least one student');
-        return; // Stop the form submission if no student is selected
-    }
-
-
-    try {
-        const response = await fetch('/form-master/submit-assessment', {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({ term, session, assessments })
-        });
-
-        if (response.ok) {
-            alert('Assessment data saved successfully');
-            document.getElementById('studentList').style.display = 'none';
-            document.getElementById('classSelection').style.display = 'block';
-        } else {
-            alert('Error saving assessment data');
-        }
-    } catch (error) {
-        console.error('Submission error:', error);
-        alert('Failed to submit assessments');
-    }
-});
-
-    </script>
+    <script src="extra.js"></script>
 </body>
 </html>
