--- a/login.html
+++ b/login.html
@@ -9,22 +9,65 @@
   <link rel="stylesheet" href="login.css"> 
 </head>
 <body>
-  <div class="container">
-    <form action="/login" method="POST" class="border p-4 shadow-sm rounded">
-      <h2 class="text-center mb-4">Login</h2>
-      <div class="form-group">
-        <input type="text" name="identifier" class="form-control" placeholder="Email or staff id" required>
-      </div>
-      <div class="form-group">
-        <input type="password" name="password" class="form-control" placeholder="Password" required>
-      </div>
-      <input type="hidden" name="redirectTo" id="redirectTo" value="">
-      <button type="submit" class="btn btn-primary btn-block">Login</button>
-      <p class="text-center">
-        <a href="password_reset.html">Forgot your password?</a>
-      </p>
-    </form>
-  </div><br><br>
+
+<!-- First Navbar -->
+<nav class="navbar navbar-light bg-white text-dark fixed-top first-navbar">
+  <img src="educap.jfif" alt="Education Cap" class="circular-img fixed-left-img">
+  <span class="navbar-brand mx-auto text-dark">Imam&nbsp;&nbsp;Hafsin</span>
+  <img src="logo.jpg" alt="Professor" class="circular-img fixed-right-img">
+</nav>
+
+<!-- Second Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-light text-dark second-navbar">
+  <button class="navbar-toggler" type="button" onclick="toggleNavbar()">
+      <span class="navbar-toggler-icon"></span>
+  </button>
+  <button class="cancel-btn" style="display:none;" onclick="toggleNavbar()">×</button>
+  <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+      <ul class="navbar-nav">
+          <li class="nav-item">
+              <a class="nav-link text-danger" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link text-danger" href="about.html">About</a>
+          </li>
+          <li class="nav-item dropdown">
+              <a class="nav-link text-danger dropdown-toggle" href="#" id="loginDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="padding-right: 0;">
+                Login
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="loginDropdown">
+                <li><a class="dropdown-item" href="admin-login.html">As Admin</a></li>
+                <li><a class="dropdown-item" href="login.html"> As Staff</a></li>
+                <li><a class="dropdown-item" href="#studentLogin.html"> As Student</a></li>
+              </ul>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link text-danger" href="contact.html">Contact</a>
+          </li>
+      </ul>
+  </div>
+</nav>
+
+<!-- Login Form -->
+<div class="container">
+  <form action="/login" method="POST" class="border p-4 shadow-sm rounded">
+    <div class="card-header text-center">
+      Staff Login
+    </div>
+    <div class="form-group">
+      <input type="text" name="identifier" class="form-control" placeholder="Email or staff id" required>
+    </div>
+    <div class="form-group">
+      <input type="password" name="password" class="form-control" placeholder="Password" required>
+    </div>
+    <input type="hidden" name="redirectTo" id="redirectTo" value="">
+    <button type="submit" class="btn btn-primary btn-block">Login</button>
+    <p class="text-center">
+      <a href="password_reset.html">Forgot your password?</a>
+    </p>
+  </form>
+  </div>
+
  <!-- Footer -->
  <div class="footer bg-light mt-5">
   <div class="row text-center py-3">
@@ -57,10 +100,10 @@
 <!-- Back to top button -->
 <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
 
-  <!-- Bootstrap JS, Popper.js, and jQuery -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
- <script src="login.js"></script>
+<!-- Scripts -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="login.js"></script>
 </body>
 </html>
