--- a/login.html
+++ b/login.html
@@ -54,20 +54,27 @@
     <div class="card-header text-center">
       Staff Login
     </div>
-    <div class="form-group">
-      <input type="text" name="identifier" class="form-control" placeholder="Email or staff id" required>
+    <div class="card-body">
+      <div class="form-group">
+        <label for="identifier">Email or Staff ID</label>
+        <input type="text" name="identifier" class="form-control" id="identifier" placeholder="Email or staff id" required>
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" name="password" class="form-control" id="password" placeholder="Password" required>
+      </div>
+      <input type="hidden" name="redirectTo" id="redirectTo" value="">
+      <button type="submit" class="btn btn-primary btn-block">Login</button>
+      <p class="text-center">
+        <a href="password_reset.html">Forgot your password?</a>
+      </p>
     </div>
-    <div class="form-group">
-      <input type="password" name="password" class="form-control" placeholder="Password" required>
-    </div>
-    <input type="hidden" name="redirectTo" id="redirectTo" value="">
-    <button type="submit" class="btn btn-primary btn-block">Login</button>
-    <p class="text-center">
-      <a href="password_reset.html">Forgot your password?</a>
-    </p>
   </form>
   </div>
-
+</div>
+</div>
+</div>
+</div>
  <!-- Footer -->
  <div class="footer bg-light mt-5">
   <div class="row text-center py-3">
