--- a/password_reset.html
+++ b/password_reset.html
@@ -7,10 +7,48 @@
   <title>Password Reset</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-  <link rel="stylesheet" href="acc.css">
+  <link rel="stylesheet" href="login.css">
 </head>
 
 <body>
+  
+<!-- First Navbar -->
+<nav class="navbar navbar-light bg-white text-dark fixed-top first-navbar">
+  <img src="educap.jfif" alt="Education Cap" class="circular-img fixed-left-img">
+  <span class="navbar-brand mx-auto text-dark">Imam&nbsp;&nbsp;Hafsin</span>
+  <img src="logo.jpg" alt="Professor" class="circular-img fixed-right-img">
+</nav>
+
+<!-- Second Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-light text-dark second-navbar">
+  <button class="navbar-toggler" type="button" onclick="toggleNavbar()">
+      <span class="navbar-toggler-icon"></span>
+  </button>
+  <button class="cancel-btn" style="display:none;" onclick="toggleNavbar()">×</button>
+  <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+      <ul class="navbar-nav">
+          <li class="nav-item">
+              <a class="nav-link text-danger" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link text-danger" href="about.html">About</a>
+          </li>
+          <li class="nav-item dropdown">
+              <a class="nav-link text-danger dropdown-toggle" href="#" id="loginDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="padding-right: 0;">
+                Login
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="loginDropdown">
+                <li><a class="dropdown-item" href="admin-login.html">As Admin</a></li>
+                <li><a class="dropdown-item" href="login.html"> As Staff</a></li>
+                <li><a class="dropdown-item" href="#studentLogin.html"> As Student</a></li>
+              </ul>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link text-danger" href="contact.html">Contact</a>
+          </li>
+      </ul>
+  </div>
+</nav>
   <!-- Main content container -->
   <div class="content">
     <div class="container">
