--- a/login.html
+++ b/login.html
@@ -68,6 +68,9 @@
       <p class="text-center">
         <a href="password_reset.html">Forgot your password?</a>
       </p>
+      <p class="text-center mt-3">
+        Don't have an account? <a href="signup.html">Sign up here</a>.
+      </p>
     </div>
   </form>
   </div>
