--- a/about.html
+++ b/about.html
@@ -113,7 +113,7 @@
         </ul>
     </div>
 
-  <!-- Testimonials Section -->
+<!-- Testimonials Section -->
 <div class="container my-5">
     <h2 class="section-title">What People Say</h2>
     <div id="testimonialsCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="7000">
@@ -121,7 +121,7 @@
             <!-- Testimonial 1 -->
             <div class="carousel-item active">
                 <div class="text-center">
-                    <img src="shamsu.jpg" alt="Parent" class="rounded-circle" >
+                    <img src="shamsu.jpg" alt="Parent" class="rounded-circle" style="width: 160px; height: 160px; object-fit: cover; object-position: top 15%;">
                     <blockquote class="blockquote mt-3">
                         <p class="mb-0">
                             "Imam Hafsin Model International School is a place where my child has not only excelled academically but also grown spiritually."
@@ -133,7 +133,7 @@
             <!-- Testimonial 2 -->
             <div class="carousel-item">
                 <div class="text-center">
-                    <img src="ft1.jpg" alt="Former Student" class="rounded-circle">
+                    <img src="passport.jpg" alt="Former Student" class="rounded-circle" style="width: 160px; height: 160px; object-fit: cover; object-position: top 15%;">
                     <blockquote class="blockquote mt-3">
                         <p class="mb-0">
                             "The teachers are highly skilled, and the environment is conducive for learning."
@@ -145,7 +145,7 @@
             <!-- Testimonial 3 -->
             <div class="carousel-item">
                 <div class="text-center">
-                    <img src="former.jpeg" alt="Community Member" class="rounded-circle">
+                    <img src="former.jpeg" alt="Community Member" class="rounded-circle" style="width: 160px; height: 160px; object-fit: cover; object-position: top 15%;">
                     <blockquote class="blockquote mt-3">
                         <p class="mb-0">
                             "The school's integration of Islamic and Western education is commendable. A truly unique institution!"
@@ -155,15 +155,6 @@
                 </div>
             </div>
         </div>
-        <!-- Carousel Controls -->
-        <button class="carousel-control-prev" type="button" data-bs-target="#testimonialsCarousel" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#testimonialsCarousel" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
     </div>
 </div>
 
