--- a/login.html
+++ b/login.html
@@ -36,9 +36,9 @@
                 Login
               </a>
               <ul class="dropdown-menu" aria-labelledby="loginDropdown">
-                <li><a class="dropdown-item" href="admin-login.html">As Admin</a></li>
-                <li><a class="dropdown-item" href="login.html"> As Staff</a></li>
-                <li><a class="dropdown-item" href="#studentLogin.html"> As Student</a></li>
+                <li><a class="dropdown-item" href="admin-login.html">Admin</a></li>
+                <li><a class="dropdown-item" href="login.html">Staff</a></li>
+                <li><a class="dropdown-item" href="#studentLogin.html">Student</a></li>
               </ul>
           </li>
           <li class="nav-item">
