--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
     <div class="contact-container my-4">
         <div class="row">
             <!-- Map and Address Section -->
-            <div class="col-lg-6">
+            <div class="col-lg-6 text-center">
                 <h2>Our Location</h2>
                 <p><strong>School Address:</strong></p>
                 <p>622, Yakasai Street, Tal'udu G/Kaya Gwale LGA, Kano State</p>
