--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
               <!-- Director of Western Education -->
             <div class="col-md-4">
                 <img src="auwal1.jfif" alt="Director of Western Education" class="profile-pic">
-                <h5>Mr. Auwal Muhammad</h5>
+                <h5>Mrs. Amina Ibrahim</h5>
                 <p>Director of Western Education</p>
                 <p>
                     Mr. Auwal Muhammad is an experienced educator with a Master's degree in Education. He has been instrumental in 
