--- a/admin-signup.html
+++ b/admin-signup.html
@@ -96,6 +96,7 @@
           <button type="submit" class="btn btn-primary btn-block">Create Admin</button>
       </div>
   </form>
+  <button class="close-btn" onclick="goBack()">Close</button>
 </div>
 <br><br>
  <!-- Footer -->
